--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <footer class="bg-gray-900 text-white py-12 rounded-t-xl">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h3 class="text-3xl font-bold mb-4">GadgetStore</h3>
-                <p class="text-gray-400 text-sm">Створено з ❤️ пристрасним розробником</p>
-                <p class="text-gray-400 text-xs mt-2">© 2024 GadgetStore. Всі права захищені.</p>
+                <p class="text-gray-400 text-sm">Створено з ❤️ © 2025 Цифра vs Реальність. Пошук балансу</p>
+                <p class="text-gray-400 text-xs mt-2">© 2025 GadgetStore. Всі права захищені.</p>
             </div>
         </footer>
     </div>
@@ -260,3 +260,4 @@
 
 </body>
 </html>
+
